--- a/componentes/header.html
+++ b/componentes/header.html
@@ -1,71 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../poncho.min.css">
-    <link href="/poncho/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
+    <link
+      href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
-</head>
-<section class="jumbotron bg-primary">
+  </head>
+  <section class="jumbotron bg-primary">
     <div class="jumbotron_body">
-        <div class="container">
-            <div class="row"></div>
-        </div>
+      <div class="container">
+        <div class="row"></div>
+      </div>
     </div>
-</section>
-<div class="bg-gray">
+  </section>
+  <div class="bg-gray">
     <div class="container">
-        <div class="row">
-            <div id="alignment-example" class="collapse navbar-collapse">
-                <ul class="nav nav-pills text-arg-azul">
-                    <li><a href="../notificaciones/index.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
-                    <li><a href="../notificaciones/index.html"><i class="icono-arg-alarma-negativo"></i><strong>Panel de notificaciones</strong></a></li>
-                    <li><a href="../campañas/index.html"><i class="fa fa-signal"></i><strong>Estadísticas</strong></a></li>
-                    <li><a href="../plantillas/index.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <div id="alignment-example" class="collapse navbar-collapse">
+          <ul class="nav nav-pills text-arg-azul">
+            <li>
+              <a href="../notificaciones/index.html"
+                ><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a
+              >
+            </li>
+            <li>
+              <a href="../notificaciones/index.html"
+                ><i class="icono-arg-alarma-negativo"></i
+                ><strong>Panel de notificaciones</strong></a
+              >
+            </li>
+            <li>
+              <a href="../campañas/index.html"
+                ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
+              >
+            </li>
+            <li>
+              <a href="../plantillas/index.html"
+                ><i class="fa fa-cog"></i><strong>Configuración</strong></a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="tab-content bg-white">
-              <div id="home" class="tab-pane fade in active">
-                <h3>HOME</h3>
-            <hr/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, facilis, eveniet.</p>
-              </div>
-              <div id="seccion" class="tab-pane fade">
-                <h3>Sección</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, facilis, eveniet.</p>
-              </div>
-              <div id="contacto" class="tab-pane fade">
-                <h3>Contacto</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, facilis, eveniet.</p>
-            </div>
-        </div>
-    </div>
-</div>
-    <!-- jQuery library -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Initialize Bootstrap functionality -->
-    <script>
-    // Initialize tooltip component
-    $(function() {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-
-    // Initialize popover component
-    $(function() {
-        $('[data-toggle="popover"]').popover()
-    })
-    </script>
-
+  </div>
 </html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
+    <link
+      href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="col-md-2 p-l-0">
+      <section class="jumbotron bg-primary">
+        <div class="jumbotron_body">
+          <div class="container">
+            <div class="row">
+              <h1 class="h4 p-x-2">Noti.mi</h1>
+              <hr />
+            </div>
+
+            <div class="row">
+              <div class="collapse navbar-collapse">
+                <ul class="nav nav-pills text-arg-azul">
+                  <li class="m-y-1">
+                    <a href="../notificaciones/index.html"
+                      ><i class="icono-arg-casa-negativo m-r-1"></i
+                      ><strong>Dashboard</strong></a
+                    >
+                  </li>
+                  <li class="m-y-1">
+                    <a href="../notificaciones/index.html"
+                      ><i class="icono-arg-alarma-negativo m-r-1"></i
+                      ><strong>Notificaciones</strong></a
+                    >
+                  </li>
+                  <li class="m-y-1">
+                    <a href="../campañas/index.html"
+                      ><i class="fa fa-signal m-r-1"></i
+                      ><strong>Métricas</strong></a
+                    >
+                  </li>
+                  <li class="m-y-1">
+                    <a href="../plantillas/index.html"
+                      ><i class="fa fa-cog m-r-1"></i
+                      ><strong>Configuración</strong></a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
+</html> -->
