--- a/componentes/segmentacion.html
+++ b/componentes/segmentacion.html
@@ -239,7 +239,7 @@
             </button>
             <button
               type="button"
-              onclick="location.replace('../paginas/home.html')"
+              onclick="location.replace('../index.html')"
               class="btn btn-danger"
             >
               Cancelar
