--- a/estadisticas/index.html
+++ b/estadisticas/index.html
@@ -52,7 +52,7 @@
                 >
               </li>
               <li>
-                <a href="../campañas/index.html"
+                <a href="../estadísticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
@@ -222,7 +222,7 @@
       <button
         type="button"
         class="btn btn-link"
-        onclick="location.replace('/notificaciones/index.html')"
+        onclick="location.replace('../index.html')"
       >
         Volver
       </button>
