--- a/notificaciones/nuevanovedad.html
+++ b/notificaciones/nuevanovedad.html
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="col-md-8 p-x-1 m-y-4">
                         <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
-                        <button type="button" onclick="location.replace('../paginas/home.html')" class="btn btn-danger">Cancelar</button>
+                        <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
                     </div>
                 </div>
         </div>
