--- a/notificaciones/nuevapush.html
+++ b/notificaciones/nuevapush.html
@@ -91,7 +91,7 @@
                 <div class="row m-y-4">
                     <div class="col-md-8 p-x-1">
                         <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
-                        <button type="button" onclick="location.replace('../paginas/home.html')" class="btn btn-danger">Cancelar</button>
+                        <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
                     </div>
             </div>
         </div>
