--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/poncho.min.css" />
+    <link rel="stylesheet" href="poncho.min.css" />
+
     <link
       href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
@@ -39,7 +40,7 @@
           <div id="alignment-example" class="collapse navbar-collapse">
             <ul class="nav nav-tabs text-arg-azul">
               <li>
-                <a href="../notificaciones/index.html"
+                <a href="#"
                   ><i class="icono-arg-casa-negativo"></i
                   ><strong>Home</strong></a
                 >
@@ -51,7 +52,7 @@
                 >
               </li>
               <li>
-                <a href="../campañas/index.html"
+                <a href="../estadisticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
