--- a/notificaciones/editar.html
+++ b/notificaciones/editar.html
@@ -1,77 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../poncho.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./estilos.css" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row p-x-1 m-y-4">
-                        <form>
-                                <div>
-                                    <fieldset>
-                                        <legend>
-                                            <h1 class="h4">Edición de notificaciones</h1>
-                                            <hr/>
-                                        </legend>
-                                        <div class="row">
-                                            <div class="col-md-8">
-                                                <div class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                                    <label>Nombre de la notificación</label>
-                                                    <input class="form-control form-text required" type="text" placeholder="Prevení el dengue">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-8">
-                                                <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                                    <label>Campaña</label>
-                                                    <input class="form-control form-text required" type="text" placeholder="Dengue">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="form-group col-md-4 col-xs-6 item-form">
-                                                <label>Fecha de envío</label>
-                                                <input type="date" class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-8">
-                                                <div class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                                    <label>Título</label>
-                                                    <input class="form-control form-text required" type="text" placeholder="Prevení el dengue">
-                                                    <p class="help-block error">Extensión máxima: 65 carácteres</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-8">
-                                                <div class="form-textarea-wrapper resizable textarea-processed resizable-textarea">
-                                                    <label>Cuerpo del mensaje</label>
-                                                    <textarea class="form-control form-textarea required" cols="60" rows="3" placeholder="Es muy importante descartar todos los objetos que puedan servir de criadero del mosquito. Recordá acercarte a un centro de salud en caso de que presentes síntomas. Para más información ingresa a argentina.gob.ar/dengue"></textarea>
-                                                        <p class="help-block error">Extensión máxima: 240 carácteres</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-8">
-                                                <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                                    <label class="control-label">Link</label>
-                                                    <input class="form-control form-text required">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- <div class="row">
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row p-x-1 m-y-4">
+            <form>
+              <div>
+                <fieldset>
+                  <legend>
+                    <h1 class="h4">Edición de notificaciones</h1>
+                    <hr />
+                  </legend>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div
+                        class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group"
+                      >
+                        <label>Nombre de la notificación</label>
+                        <input
+                          class="form-control form-text required"
+                          type="text"
+                          placeholder="Prevení el dengue"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div
+                        class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group"
+                      >
+                        <label>Campaña</label>
+                        <input
+                          class="form-control form-text required"
+                          type="text"
+                          placeholder="Dengue"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="form-group col-md-4 col-xs-6 item-form">
+                      <label>Fecha de envío</label>
+                      <input type="date" class="form-control" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div
+                        class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group"
+                      >
+                        <label>Título</label>
+                        <input
+                          class="form-control form-text required"
+                          type="text"
+                          placeholder="Prevení el dengue"
+                        />
+                        <p class="help-block error">
+                          Extensión máxima: 65 carácteres
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div
+                        class="form-textarea-wrapper resizable textarea-processed resizable-textarea"
+                      >
+                        <label>Cuerpo del mensaje</label>
+                        <textarea
+                          class="form-control form-textarea required"
+                          cols="60"
+                          rows="3"
+                          placeholder="Es muy importante descartar todos los objetos que puedan servir de criadero del mosquito. Recordá acercarte a un centro de salud en caso de que presentes síntomas. Para más información ingresa a argentina.gob.ar/dengue"
+                        ></textarea>
+                        <p class="help-block error">
+                          Extensión máxima: 240 carácteres
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <div
+                        class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group"
+                      >
+                        <label class="control-label">Link</label>
+                        <input class="form-control form-text required" />
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div class="row">
                                             <div class="col-md-8">
                                                 <div class="form-managed-file input-group">
                                                     <label class="control-label">Imagen</label>
@@ -149,21 +181,24 @@
                                                 </table>
                                             </div>
                                         </div> -->
-                                    </fieldset>
-                                </div>
-                                <div class="row m-y-4">
-                                    <div class="col-md-8">
-                                        <button type="button" class="btn btn-success">Guardar</button>
-                                        <button type="button" onclick="location.replace('../paginas/home.html')" class="btn btn-danger">Cancelar</button>
-                                    </div>
-                                </div>
-                        </form>
-                    </div>
-
+                </fieldset>
+              </div>
+              <div class="row m-y-4">
+                <div class="col-md-8">
+                  <button type="button" class="btn btn-success">Guardar</button>
+                  <button
+                    type="button"
+                    onclick="location.replace('../index.html')"
+                    class="btn btn-danger"
+                  >
+                    Cancelar
+                  </button>
                 </div>
-
-            </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
