--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 >
               </li>
               <li>
-                <a href="../notificaciones/index.html"
+                <a href="notificaciones/index.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
