--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 >
               </li>
               <li>
-                <a href="../estadisticas/index.html"
+                <a href="/estadisticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
               <li>
-                <a href="../plantillas/index.html"
+                <a href="/plantillas/index.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
