--- a/estadisticas/index.html
+++ b/estadisticas/index.html
@@ -40,24 +40,24 @@
           <div id="alignment-example" class="collapse navbar-collapse">
             <ul class="nav nav-tabs text-arg-azul">
               <li>
-                <a href="../index.html"
+                <a href="/index.html"
                   ><i class="icono-arg-casa-negativo"></i
                   ><strong>Home</strong></a
                 >
               </li>
               <li>
-                <a href="../notificaciones/index.html"
+                <a href="/notificaciones/index.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
               </li>
               <li>
-                <a href="../estadísticas/index.html"
+                <a href="/estadisticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
               <li>
-                <a href="../plantillas/index.html"
+                <a href="/plantillas/index.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
