--- a/plantillas/index.html
+++ b/plantillas/index.html
@@ -1,105 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../poncho.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
-    en esta instancia se agrega la etiqueta directamente en el archivo-->
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid container">
-                <div class="row">
-                    <div id="alignment-example" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav main-menu">
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notificaciones<span class="caret"></span></a>
-                                <ul class="dropdown-menu" aria-labelledby="Notificaciones">
-                                    <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
-                                    <li><a href="../campañas/index.html">Campañas</a></li>
-                                    <li><a href="../plantillas/index.html">Plantillas</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="../estadisticas/index.html">Estadísticas</a>
-                            </li>
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="../usuarios/usuarios.html">Usuarios</a></li>
-                                    <li><a href="../usuarios/rol.html">Rol</a></li>
-                                </ul>
-                            </li>
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Salir</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main>
+  <body>
+    <section class="jumbotron bg-primary">
+      <div class="jumbotron_body">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <button type="button" class="btn btn-success btn-sm" onclick="location.replace('./nueva.html')">+ Nueva plantilla</button>
-                    <h1 class="h4">Plantillas</h1>
-                    <hr>
-                    <section id="notificacion_en_proceso">
-                        <table class="table table-responsive-poncho table-striped">
-                            <thead>
-                                <th><p class="text-muted">Nombre</p></th>
-                                <th><p class="text-muted">Acción</p></th>
-                            </thead>
-                            <tr>
-                                <td><strong>Dengue A</strong></td>
-                                <td><button class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td><strong>Dengue B</strong></td>
-                                <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td><strong>Vacunación A</strong></td>
-                                <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td><strong>Vacunación B</strong></td>
-                                <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                            </tr>
-                        </table>
-                        <button type="button" class="btn btn-default btn-tag" onclick="location.replace('../notificaciones/index.html')">Cancelar</button>
-                    </section>
-                </div>
-            </div>
+          <div class="row"></div>
         </div>
+      </div>
+    </section>
+    <div class="bg-gray">
+      <div class="container">
+        <div class="row">
+          <div id="alignment-example" class="collapse navbar-collapse">
+            <ul class="nav nav-tabs text-arg-azul">
+              <li>
+                <a href="/index.html"
+                  ><i class="icono-arg-casa-negativo"></i
+                  ><strong>Home</strong></a
+                >
+              </li>
+              <li>
+                <a href="/notificaciones/index.html"
+                  ><i class="icono-arg-alarma-negativo"></i
+                  ><strong>Panel de notificaciones</strong></a
+                >
+              </li>
+              <li>
+                <a href="/estadisticas/index.html"
+                  ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
+                >
+              </li>
+              <li>
+                <a href="/plantillas/index.html"
+                  ><i class="fa fa-cog"></i><strong>Configuración</strong></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <button
+              type="button"
+              class="btn btn-success btn-sm"
+              onclick="location.replace('./nueva.html')"
+            >
+              + Nueva plantilla
+            </button>
+            <h1 class="h4">Plantillas</h1>
+            <hr />
+            <section id="notificacion_en_proceso">
+              <table class="table table-responsive-poncho table-striped">
+                <thead>
+                  <th><p class="text-muted">Nombre</p></th>
+                  <th><p class="text-muted">Acción</p></th>
+                </thead>
+                <tr>
+                  <td><strong>Dengue A</strong></td>
+                  <td>
+                    <button
+                      class="btn btn-primary btn-sm"
+                      onclick="location.replace('./editar.html')"
+                    >
+                      Editar
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Dengue B</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Vacunación A</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Vacunación B</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+              </table>
+              <button
+                type="button"
+                class="btn btn-default btn-tag"
+                onclick="location.replace('../notificaciones/index.html')"
+              >
+                Cancelar
+              </button>
+            </section>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
-<!-- jQuery library -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<!-- Initialize Bootstrap functionality -->
-<script>
-// Initialize tooltip component
-$(function() {
-    $('[data-toggle="tooltip"]').tooltip()
-})
+  </body>
+  <!-- jQuery library -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!-- Initialize Bootstrap functionality -->
+  <script>
+    // Initialize tooltip component
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
 
-// Initialize popover component
-$(function() {
-    $('[data-toggle="popover"]').popover()
-})
-</script>
-
+    // Initialize popover component
+    $(function () {
+      $('[data-toggle="popover"]').popover();
+    });
+  </script>
 </html>
