index relative from notificaciones

--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -39,7 +39,7 @@
           <div id="alignment-example" class="collapse navbar-collapse">
             <ul class="nav nav-tabs text-arg-azul">
               <li>
-                <a href="/index.html"
+                <a href="../index.html"
                   ><i class="icono-arg-casa-negativo"></i
                   ><strong>Home</strong></a
                 >
@@ -75,7 +75,7 @@
               <hr />
             </div>
             <button
-              onclick="location.replace('../index.html')"
+              onclick="location.replace('/index.html')"
               class="btn btn-success btn-sm pull-right m-y-1"
             >
               + Nueva notificación
