--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 >
               </li>
               <li>
-                <a href="/estadisticas/index.html"
+                <a href="estadisticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
               <li>
-                <a href="/plantillas/index.html"
+                <a href="plantillas/index.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
@@ -83,7 +83,7 @@
             <div class="col-md-4">
               <a
                 class="panel panel-default"
-                href="../notificaciones/nuevapush.html"
+                href="/notificaciones/nuevapush.html"
               >
                 <div class="panel-body bg-gray p-y-2">
                   <div class="media">
@@ -100,7 +100,7 @@
             <div class="col-md-4">
               <a
                 class="panel panel-default"
-                href="../notificaciones/nuevasplash.html"
+                href="/notificaciones/nuevasplash.html"
               >
                 <div class="panel-body bg-gray p-y-2">
                   <div class="media">
@@ -117,7 +117,7 @@
             <div class="col-md-4">
               <a
                 class="panel panel-default"
-                href="../notificaciones/nuevanovedad.html"
+                href="/notificaciones/nuevanovedad.html"
               >
                 <div class="panel-body bg-gray p-y-2">
                   <div class="media">
