--- a/configuracion.html
+++ b/configuracion.html
@@ -31,18 +31,18 @@
                 >
               </li>
               <li>
-                <a href="/notificaciones/index.html"
+                <a href="notificaciones/index.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
               </li>
               <li>
-                <a href="/estadisticas/index.html"
+                <a href="estadisticas/index.html"
                   ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
                 >
               </li>
               <li>
-                <a href="/plantillas/index.html"
+                <a href="plantillas/index.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
@@ -71,7 +71,7 @@
                     <td>
                       <button
                         class="btn btn-primary btn-sm"
-                        onclick="location.replace('./editarusuario.html')"
+                        onclick="location.replace('usuarios/editarusuario.html')"
                       >
                         Editar
                       </button>
@@ -100,7 +100,7 @@
               <button
                 type="button"
                 class="btn btn-default btn-tag"
-                onclick="location.replace('../notificaciones/index.html')"
+                onclick="location.replace('notificaciones/index.html')"
               >
                 Volver
               </button>
@@ -109,21 +109,5 @@
         </div>
       </div>
     </main>
-    <!-- jQuery library -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Initialize Bootstrap functionality -->
-    <script>
-      // Initialize tooltip component
-      $(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-
-      // Initialize popover component
-      $(function () {
-        $('[data-toggle="popover"]').popover();
-      });
-    </script>
   </body>
 </html>
