--- a/componentes/header.html
+++ b/componentes/header.html
@@ -35,7 +35,7 @@
   <div class="bg-gray">
     <div class="container">
       <div class="row">
-        <div id="alignment-example" class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav nav-pills text-arg-azul">
             <li>
               <a href="../notificaciones/index.html"
