--- a/metricas.html
+++ b/metricas.html
@@ -46,18 +46,18 @@
                 >
               </li>
               <li>
-                <a href="/notificaciones/index.html"
+                <a href="notificaciones.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
               </li>
               <li>
-                <a href="/estadisticas/index.html"
-                  ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
+                <a href="metricas.html"
+                  ><i class="fa fa-signal"></i><strong>Métricas</strong></a
                 >
               </li>
               <li>
-                <a href="/plantillas/index.html"
+                <a href="configuracion.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
@@ -101,7 +101,7 @@
                     <td>
                       <button
                         class="btn btn-primary btn-sm"
-                        onclick="location.replace('./ver.html')"
+                        onclick="location.replace('estadisticas/ver.html')"
                       >
                         Ver estadísticas
                       </button>
@@ -148,7 +148,7 @@
                     <td>
                       <button
                         class="btn btn-primary btn-sm"
-                        onclick="location.replace('./ver.html')"
+                        onclick="location.replace('ver.html')"
                       >
                         Ver estadísticas
                       </button>
@@ -222,7 +222,7 @@
       <button
         type="button"
         class="btn btn-link"
-        onclick="location.replace('../index.html')"
+        onclick="location.replace('/index.html')"
       >
         Volver
       </button>
