--- a/notificaciones.html
+++ b/notificaciones.html
@@ -39,24 +39,24 @@
           <div id="alignment-example" class="collapse navbar-collapse">
             <ul class="nav nav-tabs text-arg-azul">
               <li>
-                <a href="../index.html"
+                <a href="/index.html"
                   ><i class="icono-arg-casa-negativo"></i
                   ><strong>Home</strong></a
                 >
               </li>
               <li>
-                <a href="/notificaciones/index.html"
+                <a href="notificaciones.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
               </li>
               <li>
-                <a href="/estadisticas/index.html"
-                  ><i class="fa fa-signal"></i><strong>Estadísticas</strong></a
+                <a href="metricas.html"
+                  ><i class="fa fa-signal"></i><strong>Métricas</strong></a
                 >
               </li>
               <li>
-                <a href="/plantillas/index.html"
+                <a href="configuracion.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
@@ -75,7 +75,7 @@
               <hr />
             </div>
             <button
-              onclick="location.replace('/index.html')"
+              onclick="location.replace('notificaciones/index.html')"
               class="btn btn-success btn-sm pull-right m-y-1"
             >
               + Nueva notificación
