--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
                 >
               </li>
               <li>
-                <a href="/notificaciones.html"
+                <a href="notificaciones.html"
                   ><i class="icono-arg-alarma-negativo"></i
                   ><strong>Panel de notificaciones</strong></a
                 >
               </li>
               <li>
-                <a href="/metricas.html"
+                <a href="metricas.html"
                   ><i class="fa fa-signal"></i><strong>Métricas</strong></a
                 >
               </li>
               <li>
-                <a href="/configuracion.html"
+                <a href="configuracion.html"
                   ><i class="fa fa-cog"></i><strong>Configuración</strong></a
                 >
               </li>
