--- a/configuracion.html
+++ b/configuracion.html
@@ -7,7 +7,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../poncho.min.css" />
+    <link rel="stylesheet" href="poncho.min.css" />
     <title>Document</title>
   </head>
 
