--- a/metricas.html
+++ b/metricas.html
@@ -7,7 +7,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../poncho.min.css" />
+    <link rel="stylesheet" href="poncho.min.css" />
     <link
       href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
@@ -27,46 +27,37 @@
   </head>
 
   <body>
-    <section class="jumbotron bg-primary">
-      <div class="jumbotron_body">
-        <div class="container">
-          <div class="row"></div>
-        </div>
+    <div class="col-md-2 bg-primary p-y-2 p-x-1">
+      <div class="row">
+        <h1 class="h3 p-x-2"><i class="fa fa-inbox m-r-1"></i> Noti.mi</h1>
+        <hr />
       </div>
-    </section>
-    <div class="bg-gray">
-      <div class="container">
-        <div class="row">
-          <div id="alignment-example" class="collapse navbar-collapse">
-            <ul class="nav nav-tabs text-arg-azul">
-              <li>
-                <a href="/index.html"
-                  ><i class="icono-arg-casa-negativo"></i
-                  ><strong>Home</strong></a
-                >
-              </li>
-              <li>
-                <a href="notificaciones.html"
-                  ><i class="icono-arg-alarma-negativo"></i
-                  ><strong>Panel de notificaciones</strong></a
-                >
-              </li>
-              <li>
-                <a href="metricas.html"
-                  ><i class="fa fa-signal"></i><strong>Métricas</strong></a
-                >
-              </li>
-              <li>
-                <a href="configuracion.html"
-                  ><i class="fa fa-cog"></i><strong>Configuración</strong></a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
+      <ul class="nav">
+        <li class="m-y-1">
+          <a href="index.html"
+            ><i class="icono-arg-casa-negativo m-r-1"></i
+            ><strong>Dashboard</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="notificaciones.html"
+            ><i class="icono-arg-alarma-negativo m-r-1"></i
+            ><strong>Notificaciones</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="#"
+            ><i class="fa fa-signal m-r-1"></i><strong>Métricas</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="configuracion.html"
+            ><i class="fa fa-cog m-r-1"></i><strong>Configuración</strong></a
+          >
+        </li>
+      </ul>
+    </div>
     <div class="container">
       <div class="row">
         <div class="row">
