--- a/notificaciones/nuevapush.html
+++ b/notificaciones/nuevapush.html
@@ -23,10 +23,10 @@
             <div class="row">
                 <div id="alignment-example" class="collapse navbar-collapse">
                     <ul class="nav nav-tabs text-arg-azul">
-                        <li><a href="../notificaciones/index.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
+                        <li><a href="../index.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
                         <li><a href="../notificaciones/index.html"><i class="icono-arg-alarma-negativo"></i><strong>Panel de notificaciones</strong></a></li>
                         <li><a href="../campañas/index.html"><i class="fa fa-signal"></i><strong>Estadísticas</strong></a></li>
-                        <li><a href="../plantillas/index.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
+                        <li><a href="../configuracion.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
                     </ul>
                 </div>
             </div>
