nueva propuesta /dashboard

--- a/componentes/header.html
+++ b/componentes/header.html
@@ -1,30 +1,4 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../poncho.min.css" />
-    <link
-      href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Document</title>
-  </head>
+
   <section class="jumbotron bg-primary">
     <div class="jumbotron_body">
       <div class="container">
@@ -63,77 +37,41 @@
       </div>
     </div>
   </div>
-</html> -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../poncho.min.css" />
-    <link
-      href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="col-md-2 p-l-0">
-      <section class="jumbotron bg-primary">
-        <div class="jumbotron_body">
-          <div class="container">
-            <div class="row">
-              <h1 class="h4 p-x-2">Noti.mi</h1>
-              <hr />
-            </div>
 
-            <div class="row">
-              <div class="collapse navbar-collapse">
-                <ul class="nav nav-pills text-arg-azul">
-                  <li class="m-y-1">
-                    <a href="../notificaciones/index.html"
-                      ><i class="icono-arg-casa-negativo m-r-1"></i
-                      ><strong>Dashboard</strong></a
-                    >
-                  </li>
-                  <li class="m-y-1">
-                    <a href="../notificaciones/index.html"
-                      ><i class="icono-arg-alarma-negativo m-r-1"></i
-                      ><strong>Notificaciones</strong></a
-                    >
-                  </li>
-                  <li class="m-y-1">
-                    <a href="../campañas/index.html"
-                      ><i class="fa fa-signal m-r-1"></i
-                      ><strong>Métricas</strong></a
-                    >
-                  </li>
-                  <li class="m-y-1">
-                    <a href="../plantillas/index.html"
-                      ><i class="fa fa-cog m-r-1"></i
-                      ><strong>Configuración</strong></a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
+
+
+  <div class="col-md-2 bg-primary p-y-2 p-x-2" style="width: fit-content;">
+    <div class="row">
+      <h1 class="h4 p-x-2"><i class="fa fa-inbox" style="font-size: 0.75em;"></i> Noti.mi</h1>
     </div>
-  </body>
-</html>
+    <div class="row">
+      <ul class="nav">
+        <li class="m-y-1">
+          <a href="/index.html"
+            ><i class="icono-arg-casa-negativo" style="font-size: 0.75em;"></i
+            ><strong class="p-l-1">Dashboard</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="notificaciones.html"
+            ><i class="icono-arg-alarma-negativo" style="font-size: 0.75em;"></i
+            ><strong class="p-l-1">Notificaciones</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="metricas.html"
+            ><i class="fa fa-signal" style="font-size: 0.75em;"></i><strong class="p-l-1">Métricas</strong></a
+          >
+        </li>
+        <li class="m-y-1">
+          <a href="configuracion.html"
+            ><i class="fa fa-cog" style="font-size: 0.75em;"></i><strong class="p-l-1">Configuración</strong></a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="row m-y-6 p-y-10 vh-100">
+      <p>Nombre Apellido</p>
+    </div>
+  </div>
